youtube-tutorial-series-master/container-communication-k8s-networking/YASI/k8s-service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
 name: k8s-service-node-port
spec:
 type: NodePort
 selector:
  app: my-app
 ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30008
