youtube-tutorial-series-master/container-communication-k8s-networking/YASI/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: k8s-service
spec:
 selector:
  app: my-app
 ports:
  - protocol: TCP
    port: 80
    targetPort: 80
