youtube-tutorial-series-master/container-communication-k8s-networking/YASI/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
 name: k8s-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: dev.localdev.me
    http:
      paths:
      - backend:
          service:
            name: k8s-service
            port:
              number: 80
        path: /
        pathType: Prefix
